@@ -23,7 +23,7 @@ public class SqlMovieDaoFactory {
             String daoClassName = ConfigurationParametersManager
                     .getParameter(CLASS_NAME_PARAMETER);
             Class daoClass = Class.forName(daoClassName);
-            return (SqlMovieDao) daoClass.newInstance();
+            return (SqlMovieDao) daoClass.getDeclaredConstructor().newInstance();
         } catch (Exception e) {
             throw new RuntimeException(e);
         }
